# games

./: LICENSE  package.json
.github/workflows/: api-deploy.yml  ci.yml
apps/api/: .dockerignore  Dockerfile  config.py  database.py  docker-compose.yml  elasticmq.conf  models.py  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_migration.py
apps/api/services/: sqs.py
apps/api/workers/: processor.py
